<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero1"
            android:textSize="25sp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:id="@+id/num1"
            android:inputType="number"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numero2"
            android:textSize="25sp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:id="@+id/num2"
            android:inputType="number"
            />




        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/resultado"
            android:textSize="25sp"
            android:typeface="monospace"
            android:textStyle="bold"
            android:id="@+id/res"
            android:inputType="number"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"

            >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/radio"
                >


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd1"
                    android:text="@string/suma"
                    android:onClick="radiobuttonclicked"
                    android:checked="true"

                    android:layout_marginTop="@dimen/margen_arribam"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd2"
                    android:text="@string/resta"
                    android:layout_marginTop="@dimen/margen_arribap"
                    android:onClick="radiobuttonclicked"

                    />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd3"
                    android:text="@string/mul"
                    android:layout_marginTop="@dimen/margen_arribap"
                    android:onClick="radiobuttonclicked"

                    />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd4"
                    android:text="@string/div"
                    android:layout_marginTop="@dimen/margen_arribap"
                    android:onClick="radiobuttonclicked"

                    />





            </RadioGroup>




        </LinearLayout>





        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:id="@+id/calc"
                android:layout_gravity="center"
                />



        </LinearLayout>

    </LinearLayout>



</LinearLayout>

